--- a/Annetec.html
+++ b/Annetec.html
@@ -279,7 +279,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
                 <p class="u-text u-text-custom-color-6 u-text-26">13 x R$150,00</p>
                 <div class="u-border-1 u-border-grey-dark-1 u-line u-line-horizontal u-line-7"></div>
                 <h3 class="u-custom-font u-font-source-sans-pro u-text u-text-27">Informática Avançada</h3>
-                <a href="https://nicepage.com/landing-page" class="u-border-none u-btn u-button-style u-custom-color-6 u-hover-palette-4-light-1 u-radius-6 u-btn-5"> Matricule-se</a>
+                <a href="Informática-Avançada.html" class="u-border-none u-btn u-button-style u-custom-color-6 u-hover-palette-4-light-1 u-radius-6 u-btn-5"> Matricule-se</a>
               </div>
             </div>
             <div class="u-align-center u-container-style u-list-item u-repeater-item u-shape-rectangle">
@@ -296,7 +296,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
                 <p class="u-text u-text-custom-color-6 u-text-31">3 x R$ 150,00</p>
                 <div class="u-border-1 u-border-grey-dark-1 u-line u-line-horizontal u-line-8"></div>
                 <h3 class="u-custom-font u-font-source-sans-pro u-text u-text-32">Informática Express</h3>
-                <a href="https://nicepage.com/landing-page" class="u-border-none u-btn u-button-style u-custom-color-6 u-hover-palette-4-light-1 u-radius-6 u-btn-6"> Matricule-se</a>
+                <a href="Informática-Expres.html" class="u-border-none u-btn u-button-style u-custom-color-6 u-hover-palette-4-light-1 u-radius-6 u-btn-6"> Matricule-se</a>
               </div>
             </div>
             <div class="u-align-center u-container-style u-list-item u-repeater-item u-shape-rectangle">
