--- a/Informática-Expres.html
+++ b/Informática-Expres.html
@@ -46,7 +46,7 @@
                   </p>
                   <div class="u-border-1 u-border-grey-dark-1 u-line u-line-horizontal u-line-1"></div>
                   <p class="u-text u-text-custom-color-6 u-text-4">3 X R$150,00</p>
-                  <a href="#" class="u-active-none u-border-2 u-border-hover-custom-color-5 u-border-no-left u-border-no-right u-border-no-top u-btn u-button-style u-custom-color-6 u-hover-none u-text-white u-btn-1">MATRICULE-SE</a>
+                  <a href="Informática-Expres.html#sec-75e6" class="u-active-none u-border-2 u-border-hover-custom-color-5 u-border-no-left u-border-no-right u-border-no-top u-btn u-button-style u-custom-color-6 u-hover-none u-text-white u-btn-1">MATRICULE-SE</a>
                   <div class="u-border-1 u-border-custom-color-4 u-expanded-width u-line u-line-horizontal u-line-2"></div>
                   <h5 class="u-text u-text-5">VISÃ​O GERAL</h5><span class="u-file-icon u-icon u-text-custom-color-2 u-icon-2"><img src="images/2370264-2e056890.png" alt=""></span>
                   <h5 class="u-custom-font u-text u-text-font u-text-6">3 meses&nbsp;</h5>
