--- a/Annetec.html
+++ b/Annetec.html
@@ -239,7 +239,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
                 <h3 class="u-align-center u-custom-font u-font-source-sans-pro u-text u-text-16">Aguarde<br>
                   <br>
                 </h3>
-                <a href="https://nicepage.com/landing-page" class="u-border-none u-btn u-button-style u-custom-color-6 u-hover-palette-4-light-1 u-radius-6 u-btn-3"> Matricule-se</a>
+                <a href="#" class="u-border-none u-btn u-button-style u-custom-color-6 u-hover-palette-4-light-1 u-radius-6 u-btn-3"> Matricule-se</a>
               </div>
             </div>
           </div>
