--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
                 <div class="u-border-1 u-border-grey-dark-1 u-line u-line-horizontal u-line-2"></div>
                 <h3 class="u-align-center u-custom-font u-font-source-sans-pro u-text u-text-6">Curso de Eletricista Instalador&nbsp;<br>Residencial
                 </h3>
-                <a href="#" class="u-border-none u-btn u-button-style u-custom-color-6 u-hover-palette-4-light-1 u-radius-6 u-btn-1">Matricule-se</a>
+                <a href="Eletricista-Instalador.html" class="u-border-none u-btn u-button-style u-custom-color-6 u-hover-palette-4-light-1 u-radius-6 u-btn-1">Matricule-se</a>
               </div>
             </div>
             <div class="u-align-center u-container-style u-custom-item u-list-item u-repeater-item u-shape-rectangle u-list-item-2">
@@ -220,7 +220,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
                 <div class="u-border-1 u-border-grey-dark-1 u-line u-line-horizontal u-line-3"></div>
                 <h3 class="u-align-center u-custom-font u-font-source-sans-pro u-text u-text-11">Manutenção Residencial para&nbsp;<br>Mulheres
                 </h3>
-                <a href="#" class="u-border-none u-btn u-button-style u-custom-color-6 u-hover-palette-4-light-1 u-radius-6 u-btn-2">Matricule-se</a>
+                <a href="Manutenção-Residencial.html" class="u-border-none u-btn u-button-style u-custom-color-6 u-hover-palette-4-light-1 u-radius-6 u-btn-2">Matricule-se</a>
               </div>
             </div>
             <div class="u-align-center u-container-style u-custom-item u-list-item u-repeater-item u-shape-rectangle u-list-item-3">
