--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
                 <div class="u-border-1 u-border-grey-dark-1 u-line u-line-horizontal u-line-2"></div>
                 <h3 class="u-align-center u-custom-font u-font-source-sans-pro u-text u-text-6">Curso de Eletricista Instalador&nbsp;<br>Residencial
                 </h3>
-                <a href="#" class="u-border-none u-btn u-button-style u-custom-color-6 u-hover-palette-4-light-1 u-radius-6 u-btn-1">Matricule-se</a>
+                <a href="Eletricista-Instalador.html" class="u-border-none u-btn u-button-style u-custom-color-6 u-hover-palette-4-light-1 u-radius-6 u-btn-1">Matricule-se</a>
               </div>
             </div>
             <div class="u-align-center u-container-style u-custom-item u-list-item u-repeater-item u-shape-rectangle u-list-item-2">
@@ -220,7 +220,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
                 <div class="u-border-1 u-border-grey-dark-1 u-line u-line-horizontal u-line-3"></div>
                 <h3 class="u-align-center u-custom-font u-font-source-sans-pro u-text u-text-11">Manutenção Residencial para&nbsp;<br>Mulheres
                 </h3>
-                <a href="#" class="u-border-none u-btn u-button-style u-custom-color-6 u-hover-palette-4-light-1 u-radius-6 u-btn-2">Matricule-se</a>
+                <a href="Manutenção-Residencial.html" class="u-border-none u-btn u-button-style u-custom-color-6 u-hover-palette-4-light-1 u-radius-6 u-btn-2">Matricule-se</a>
               </div>
             </div>
             <div class="u-align-center u-container-style u-custom-item u-list-item u-repeater-item u-shape-rectangle u-list-item-3">
@@ -239,7 +239,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
                 <h3 class="u-align-center u-custom-font u-font-source-sans-pro u-text u-text-16">Aguarde<br>
                   <br>
                 </h3>
-                <a href="https://nicepage.com/landing-page" class="u-border-none u-btn u-button-style u-custom-color-6 u-hover-palette-4-light-1 u-radius-6 u-btn-3"> Matricule-se</a>
+                <a href="#" class="u-border-none u-btn u-button-style u-custom-color-6 u-hover-palette-4-light-1 u-radius-6 u-btn-3"> Matricule-se</a>
               </div>
             </div>
           </div>
@@ -262,7 +262,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
                 <p class="u-text u-text-custom-color-6 u-text-21">9 x R$150,00</p>
                 <div class="u-border-1 u-border-grey-dark-1 u-line u-line-horizontal u-line-6"></div>
                 <h3 class="u-custom-font u-font-source-sans-pro u-text u-text-22">Informática Básica</h3>
-                <a href="Marketing-e-Vendas.html" class="u-border-none u-btn u-button-style u-custom-color-6 u-hover-palette-4-light-1 u-radius-6 u-btn-4"> Matricule-se</a>
+                <a href="Informática.html" class="u-border-none u-btn u-button-style u-custom-color-6 u-hover-palette-4-light-1 u-radius-6 u-btn-4"> Matricule-se</a>
               </div>
             </div>
             <div class="u-align-center u-container-style u-list-item u-repeater-item u-shape-rectangle">
@@ -279,7 +279,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
                 <p class="u-text u-text-custom-color-6 u-text-26">13 x R$150,00</p>
                 <div class="u-border-1 u-border-grey-dark-1 u-line u-line-horizontal u-line-7"></div>
                 <h3 class="u-custom-font u-font-source-sans-pro u-text u-text-27">Informática Avançada</h3>
-                <a href="#" class="u-border-none u-btn u-button-style u-custom-color-6 u-hover-palette-4-light-1 u-radius-6 u-btn-5"> Matricule-se</a>
+                <a href="Informática-Avançada.html" class="u-border-none u-btn u-button-style u-custom-color-6 u-hover-palette-4-light-1 u-radius-6 u-btn-5"> Matricule-se</a>
               </div>
             </div>
             <div class="u-align-center u-container-style u-list-item u-repeater-item u-shape-rectangle">
@@ -296,7 +296,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
                 <p class="u-text u-text-custom-color-6 u-text-31">3 x R$ 150,00</p>
                 <div class="u-border-1 u-border-grey-dark-1 u-line u-line-horizontal u-line-8"></div>
                 <h3 class="u-custom-font u-font-source-sans-pro u-text u-text-32">Informática Express</h3>
-                <a href="Programação-Web.html" class="u-border-none u-btn u-button-style u-custom-color-6 u-hover-palette-4-light-1 u-radius-6 u-btn-6"> Matricule-se</a>
+                <a href="Informática-Expres.html" class="u-border-none u-btn u-button-style u-custom-color-6 u-hover-palette-4-light-1 u-radius-6 u-btn-6"> Matricule-se</a>
               </div>
             </div>
             <div class="u-align-center u-container-style u-list-item u-repeater-item u-shape-rectangle">
@@ -313,7 +313,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
                 <p class="u-text u-text-custom-color-6 u-text-36">4 x R$150,00</p>
                 <div class="u-border-1 u-border-grey-dark-1 u-line u-line-horizontal u-line-9"></div>
                 <h3 class="u-custom-font u-font-source-sans-pro u-text u-text-37">Informática Sênior</h3>
-                <a href="https://nicepage.com/landing-page" class="u-border-none u-btn u-button-style u-custom-color-6 u-hover-palette-4-light-1 u-radius-6 u-btn-7"> Matricule-se</a>
+                <a href="Informática-Sênior.html" class="u-border-none u-btn u-button-style u-custom-color-6 u-hover-palette-4-light-1 u-radius-6 u-btn-7"> Matricule-se</a>
               </div>
             </div>
             <div class="u-align-center u-container-style u-list-item u-repeater-item u-shape-rectangle">
@@ -330,7 +330,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
                 <p class="u-text u-text-custom-color-6 u-text-41">5 x R$150,00</p>
                 <div class="u-border-1 u-border-grey-dark-1 u-line u-line-horizontal u-line-10"></div>
                 <h3 class="u-custom-font u-font-source-sans-pro u-text u-text-42">Programação Web</h3>
-                <a href="https://nicepage.com/landing-page" class="u-border-none u-btn u-button-style u-custom-color-6 u-hover-palette-4-light-1 u-radius-6 u-btn-8"> Matricule-se</a>
+                <a href="Programação-Web.html" class="u-border-none u-btn u-button-style u-custom-color-6 u-hover-palette-4-light-1 u-radius-6 u-btn-8"> Matricule-se</a>
               </div>
             </div>
             <div class="u-align-center u-container-style u-list-item u-repeater-item u-shape-rectangle">
@@ -348,7 +348,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
                 <div class="u-border-1 u-border-grey-dark-1 u-line u-line-horizontal u-line-11"></div>
                 <h3 class="u-custom-font u-font-source-sans-pro u-text u-text-47">aguarde<br>
                 </h3>
-                <a href="https://nicepage.com/landing-page" class="u-border-none u-btn u-button-style u-custom-color-6 u-hover-palette-4-light-1 u-radius-6 u-btn-9"> Matricule-se</a>
+                <a href="#" class="u-border-none u-btn u-button-style u-custom-color-6 u-hover-palette-4-light-1 u-radius-6 u-btn-9"> Matricule-se</a>
               </div>
             </div>
           </div>
@@ -375,7 +375,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
                 <p class="u-text u-text-custom-color-6 u-text-5">6 X R$150,00</p>
                 <div class="u-border-1 u-border-grey-dark-1 u-line u-line-horizontal u-line-2"></div>
                 <h3 class="u-custom-font u-font-source-sans-pro u-text u-text-6">Marketing &amp; Vendas</h3>
-                <a href="https://nicepage.com/landing-page" class="u-border-none u-btn u-button-style u-custom-color-6 u-hover-palette-4-light-1 u-radius-6 u-btn-1"> Matricule-se</a>
+                <a href="Marketing-e-Vendas.html" class="u-border-none u-btn u-button-style u-custom-color-6 u-hover-palette-4-light-1 u-radius-6 u-btn-1"> Matricule-se</a>
               </div>
             </div>
             <div class="u-align-center u-container-style u-list-item u-repeater-item u-shape-rectangle">
