--- a/Informática.html
+++ b/Informática.html
@@ -33,7 +33,7 @@
             <div class="u-layout-row">
               <div class="u-align-left u-container-style u-layout-cell u-size-30 u-layout-cell-1">
                 <div class="u-container-layout u-container-layout-1">
-                  <img class="u-image u-image-default u-image-1" src="images/Untitled-2.jpg" alt="" data-image-width="826" data-image-height="551"><span class="u-file-icon u-icon u-text-custom-color-2 u-icon-1"><img src="images/102279-adccc655.png" alt=""></span>
+                  <img class="u-image u-image-default u-image-1" src="images/Untitled-4.png" alt="" data-image-width="826" data-image-height="561"><span class="u-file-icon u-icon u-text-custom-color-2 u-icon-1"><img src="images/102279-adccc655.png" alt=""></span>
                   <p class="u-text u-text-white u-text-1">40% <br>OFF
                   </p>
                 </div>
@@ -41,14 +41,14 @@
               <div class="u-container-style u-layout-cell u-size-30 u-white u-layout-cell-2">
                 <div class="u-container-layout u-container-layout-2">
                   <div class="u-expanded-width-xs u-grey-5 u-shape u-shape-rectangle u-shape-1"></div>
-                  <h1 class="u-text u-text-2">Marketing &amp; Vendas</h1>
+                  <h1 class="u-text u-text-2">Informática Básica</h1>
                   <div class="u-clearfix u-expanded-width u-group-elements u-group-elements-1">
                     <div class="u-align-center u-clearfix u-group-elements u-group-elements-2"></div>
                   </div>
-                  <p class="u-small-text u-text u-text-variant u-text-3">de R$ 1.500,00<br>por R$ 900,00
+                  <p class="u-small-text u-text u-text-variant u-text-3">de R$ 2.500,00<br>por R$ 1.500,00
                   </p>
                   <div class="u-border-1 u-border-grey-dark-1 u-line u-line-horizontal u-line-1"></div>
-                  <p class="u-text u-text-custom-color-6 u-text-4">6 X R$150,00</p>
+                  <p class="u-text u-text-custom-color-6 u-text-4">6 X R$250,00</p>
                   <a href="Informática.html#sec-75e6" class="u-active-none u-border-2 u-border-hover-custom-color-5 u-border-no-left u-border-no-right u-border-no-top u-btn u-button-style u-custom-color-6 u-hover-none u-text-white u-btn-1">MATRICULE-SE</a>
                   <div class="u-border-1 u-border-custom-color-4 u-expanded-width u-line u-line-horizontal u-line-2"></div>
                   <h5 class="u-text u-text-5">VISÃ​O GERAL</h5><span class="u-file-icon u-icon u-text-custom-color-2 u-icon-2"><img src="images/2370264-2e056890.png" alt=""></span>
@@ -84,17 +84,16 @@
             </li>
           </ul>
           <div class="u-tab-content">
-            <div class="u-align-left u-container-style u-tab-active u-tab-pane u-white u-tab-pane-1" id="tab-0da5" role="tabpanel" aria-labelledby="link-tab-0da5">
+            <div class="u-container-style u-tab-active u-tab-pane u-white u-tab-pane-1" id="tab-0da5" role="tabpanel" aria-labelledby="link-tab-0da5">
               <div class="u-container-layout u-container-layout-1">
                 <h3 class="u-text u-text-default u-text-1">O Aluno aprenderá:</h3>
-                <p class="u-text u-text-2">O curso dará uma base ao aluno sobre como envolve um amplo conhecimento sobre&nbsp;estratégias de mercado, com o&nbsp;planejamento&nbsp;e&nbsp;análise, acompanhando toda a&nbsp;jornada de um cliente e ensinamentos sobre vendas.</p>
+                <p class="u-text u-text-2">Iniciar o aluno  na utilização do computador, através de uma linguagem simplificada e objetiva derecionando o uso em programas profissionais que são de grande valor para o mercado de trabalho atualmente onde ele aprenda a criar, formatar e manipular textos, além de abordar diversas ferramentas que irão ajudar na composição de documentos profissionais.</p>
               </div>
             </div>
             <div class="u-align-left u-container-style u-tab-pane u-white u-tab-pane-2" id="tab-14b7" role="tabpanel" aria-labelledby="link-tab-14b7">
               <div class="u-container-layout u-valign-top u-container-layout-2">
-                <p class="u-text u-text-default u-text-3">- Marketing<br>- Marketing Digital<br>- Como vender<br>- Utilização das mídias para venda do seu produto<br>
+                <p class="u-text u-text-default u-text-3">-&nbsp;Word<br>-&nbsp;Excel<br>- PowerPoint<br>- Funções e Documentações<br>- Elaborações de Apresentações<br>- Elaboração de planilhas<br>- Funções em tabelas<br>
                   <br>
-                  <br>Para saber mais sobre o que será estudado, entre em contato com a nossa secretaria.
                 </p>
               </div>
             </div>
