--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
                 <p class="u-text u-text-custom-color-6 u-text-10">6 x R$200,00</p>
                 <div class="u-border-1 u-border-grey-dark-1 u-line u-line-horizontal u-line-3"></div>
                 <h3 class="u-custom-font u-font-source-sans-pro u-text u-text-11">Auxiliar Administrativo</h3>
-                <a href="Auxiliar-Administrativo" class="u-border-none u-btn u-button-style u-custom-color-6 u-hover-palette-4-light-1 u-radius-6 u-btn-2"> Matricule-se</a>
+                <a href="Auxiliar-Administrativo.html" class="u-border-none u-btn u-button-style u-custom-color-6 u-hover-palette-4-light-1 u-radius-6 u-btn-2"> Matricule-se</a>
               </div>
             </div>
             <div class="u-align-center u-container-style u-list-item u-repeater-item u-shape-rectangle">
@@ -409,7 +409,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
                 <p class="u-text u-text-custom-color-6 u-text-15">6 x R$150,00</p>
                 <div class="u-border-1 u-border-grey-dark-1 u-line u-line-horizontal u-line-4"></div>
                 <h3 class="u-custom-font u-font-source-sans-pro u-text u-text-16">Auxiliar Jurídico</h3>
-                <a href="Auxiliar-Jurídico" class="u-border-none u-btn u-button-style u-custom-color-6 u-hover-palette-4-light-1 u-radius-6 u-btn-3"> Matricule-se</a>
+                <a href="Auxiliar-Jurídico.html" class="u-border-none u-btn u-button-style u-custom-color-6 u-hover-palette-4-light-1 u-radius-6 u-btn-3"> Matricule-se</a>
               </div>
             </div>
           </div>
@@ -438,7 +438,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
                 <div class="u-border-1 u-border-grey-dark-1 u-line u-line-horizontal u-line-2"></div>
                 <h3 class="u-custom-font u-font-source-sans-pro u-text u-text-6">Empreendedorismo na saúde</h3>
                 <h3 class="u-custom-font u-font-source-sans-pro u-text u-text-7">[Formação de corretores de planos de saúde]</h3>
-                <a href="Empreendedorismo-na-saude" class="u-border-none u-btn u-button-style u-custom-color-6 u-hover-palette-4-light-1 u-radius-6 u-btn-1"> Matricule-se</a>
+                <a href="Empreendedorismo-na-saude.html" class="u-border-none u-btn u-button-style u-custom-color-6 u-hover-palette-4-light-1 u-radius-6 u-btn-1"> Matricule-se</a>
               </div>
             </div>
             <div class="u-align-center u-container-style u-list-item u-repeater-item u-shape-rectangle">
@@ -456,7 +456,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
                 <div class="u-border-1 u-border-grey-dark-1 u-line u-line-horizontal u-line-3"></div>
                 <h3 class="u-custom-font u-font-source-sans-pro u-text u-text-12">Balconista de farmácia</h3>
                 <h3 class="u-custom-font u-font-source-sans-pro u-text u-text-13">&nbsp;</h3>
-                <a href="https://nicepage.com/landing-page" class="u-border-none u-btn u-button-style u-custom-color-6 u-hover-palette-4-light-1 u-radius-6 u-btn-2"> Matricule-se</a>
+                <a href="Balconista-de-Farmácia.html" class="u-border-none u-btn u-button-style u-custom-color-6 u-hover-palette-4-light-1 u-radius-6 u-btn-2"> Matricule-se</a>
               </div>
             </div>
             <div class="u-align-center u-container-style u-list-item u-repeater-item u-shape-rectangle">
@@ -474,7 +474,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
                 <div class="u-border-1 u-border-grey-dark-1 u-line u-line-horizontal u-line-4"></div>
                 <h3 class="u-custom-font u-font-source-sans-pro u-text u-text-18">Cuidado de Idosos</h3>
                 <h3 class="u-custom-font u-font-source-sans-pro u-text u-text-19">&nbsp;</h3>
-                <a href="https://nicepage.com/landing-page" class="u-border-none u-btn u-button-style u-custom-color-6 u-hover-palette-4-light-1 u-radius-6 u-btn-3"> Matricule-se</a>
+                <a href="Cuidador-de-Idosos.html" class="u-border-none u-btn u-button-style u-custom-color-6 u-hover-palette-4-light-1 u-radius-6 u-btn-3"> Matricule-se</a>
               </div>
             </div>
           </div>
