--- a/index.html
+++ b/index.html
@@ -461,16 +461,16 @@ document.addEventListener("DOMContentLoaded", function(event) {
             </div>
             <div class="u-align-center u-container-style u-list-item u-repeater-item u-shape-rectangle">
               <div class="u-container-layout u-similar-container u-container-layout-3">
-                <img alt="" class="u-expanded-width-sm u-expanded-width-xl u-expanded-width-xs u-image u-image-default u-image-3" data-image-width="826" data-image-height="561" src="images/embreve1.png"><span class="u-custom-item u-file-icon u-icon u-text-custom-color-2 u-icon-6"><img src="images/102279-adccc655.png" alt=""></span>
+                <img alt="" class="u-expanded-width-sm u-expanded-width-xl u-expanded-width-xs u-image u-image-default u-image-3" data-image-width="826" data-image-height="561" src="images/medica-conversando-com-seu-paciente-mais-velho.jpg"><span class="u-custom-item u-file-icon u-icon u-text-custom-color-2 u-icon-6"><img src="images/102279-adccc655.png" alt=""></span>
                 <h3 class="u-custom-font u-font-source-sans-pro u-text u-text-white u-text-14">40%<br>OFF
                 </h3>
                 <div class="u-custom-color-2 u-radius-10 u-shape u-shape-round u-shape-5"></div>
                 <p class="u-text u-text-white u-text-15">| Presencial&nbsp;&nbsp;<span class="u-file-icon u-icon u-text-white"><img src="images/1077114-41ae8903.png" alt=""></span>
                 </p>
                 <div class="u-expanded-width-sm u-expanded-width-xl u-expanded-width-xs u-grey-5 u-shape u-shape-rectangle u-shape-6"></div>
-                <p class="u-text u-text-16">EM BREVE<br>&nbsp;NOVIDADES
+                <p class="u-text u-text-16">de R$1.250,00<br>&nbsp;por R$750,00
                 </p>
-                <p class="u-text u-text-custom-color-6 u-text-17">EM BREVE</p>
+                <p class="u-text u-text-custom-color-6 u-text-17">3 x R$250,00</p>
                 <div class="u-border-1 u-border-grey-dark-1 u-line u-line-horizontal u-line-4"></div>
                 <h3 class="u-custom-font u-font-source-sans-pro u-text u-text-18">Cuidado de Idosos</h3>
                 <h3 class="u-custom-font u-font-source-sans-pro u-text u-text-19">&nbsp;</h3>
