--- a/Manutenção-Residencial.html
+++ b/Manutenção-Residencial.html
@@ -106,33 +106,29 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
               </div>
               <div class="u-container-style u-layout-cell u-size-30 u-white u-layout-cell-2">
                 <div class="u-container-layout u-container-layout-2">
-                  <div class="u-grey-5 u-shape u-shape-rectangle u-shape-1"></div>
-                  <h1 class="u-text u-text-2">Curso de Manutenção Residencial para Mulheres </h1>
+                  <div class="u-expanded-width-xs u-grey-5 u-shape u-shape-rectangle u-shape-1"></div>
+                  <h1 class="u-text u-text-2">Eletricista Instalador Residencial</h1>
                   <div class="u-clearfix u-expanded-width u-group-elements u-group-elements-1">
-                    <div class="u-align-center u-clearfix u-container-align-center-xs u-group-elements u-group-elements-2"></div>
+                    <div class="u-align-center u-clearfix u-group-elements u-group-elements-2"></div>
                   </div>
-                  <p class="u-small-text u-text u-text-variant u-text-3">de R$ 1.500,00<br>por R$ 600,00
+                  <p class="u-small-text u-text u-text-variant u-text-3">de R$ 2.500,00<br>por R$ 1.500,00
                   </p>
                   <div class="u-border-1 u-border-grey-dark-1 u-line u-line-horizontal u-line-1"></div>
-                  <p class="u-text u-text-custom-color-6 u-text-4">3 X R$200,00</p>
-                  <a href="Manutenção-Residencial.html#sec-75e6" class="u-active-none u-border-2 u-border-hover-custom-color-5 u-border-no-left u-border-no-right u-border-no-top u-btn u-button-style u-custom-color-6 u-hover-none u-text-white u-btn-1">MATRICULE-SE</a>
+                  <p class="u-text u-text-custom-color-6 u-text-4">6 X R$250,00</p>
+                  <a href="Marketing-e-Vendas.html#sec-75e6" class="u-active-none u-border-2 u-border-hover-custom-color-5 u-border-no-left u-border-no-right u-border-no-top u-btn u-button-style u-custom-color-6 u-hover-none u-text-white u-btn-1">MATRICULE-SE</a>
                   <div class="u-border-1 u-border-custom-color-4 u-expanded-width u-line u-line-horizontal u-line-2"></div>
                   <h5 class="u-text u-text-5">VISÃ​O GERAL</h5><span class="u-file-icon u-icon u-text-custom-color-2 u-icon-2"><img src="images/2370264-2e056890.png" alt=""></span>
-                  <h5 class="u-custom-font u-text u-text-font u-text-6">3 meses&nbsp;</h5>
+                  <h5 class="u-custom-font u-text u-text-font u-text-6">6 meses&nbsp;</h5>
                   <h5 class="u-text u-text-grey-70 u-text-7">Tempo de Duração:</h5><span class="u-file-icon u-icon u-text-custom-color-2 u-icon-3"><img src="images/833602-2c9be439.png" alt=""></span>
                   <h5 class="u-text u-text-grey-70 u-text-8">Tempo de ​Duração:</h5>
-                  <h5 class="u-custom-font u-text u-text-font u-text-9">24 horas</h5><span class="u-file-icon u-icon u-text-custom-color-2 u-icon-4"><img src="images/3069504-713147e2.png" alt=""></span>
+                  <h5 class="u-custom-font u-text u-text-font u-text-9">48 horas</h5><span class="u-file-icon u-icon u-text-custom-color-2 u-icon-4"><img src="images/3069504-713147e2.png" alt=""></span>
                   <h5 class="u-custom-font u-text u-text-font u-text-10"> Boleto ou carnê</h5>
                   <h5 class="u-text u-text-grey-70 u-text-11">Forma de pagamento:</h5><span class="u-file-icon u-icon u-text-custom-color-2 u-icon-5"><img src="images/569800-c992f273.png" alt=""></span>
                   <h5 class="u-custom-font u-font-pt-sans u-text u-text-custom-color-2 u-text-12">de R$ 99,90</h5>
                   <h5 class="u-text u-text-grey-70 u-text-13">Taxa de Matrícula:</h5>
-                  <div class="u-border-1 u-border-custom-color-4 u-line u-line-horizontal u-line-3"></div>
-                  <h5 class="u-custom-font u-font-pt-sans u-text u-text-14">Por R$ 50,<span class="u-text-palette-4-base">
-                      <span style="font-weight: 700;"></span>
-                    </span>0<span class="u-text-custom-color-6">
-                      <span style="font-weight: 700;"></span>
-                    </span>0
+                  <h5 class="u-custom-font u-font-pt-sans u-text u-text-custom-color-6 u-text-14">Por R$ 50, <span style="font-weight: 700;"></span>0 <span style="font-weight: 700;"></span>0
                   </h5>
+                  <div class="u-border-1 u-border-custom-color-4 u-line u-line-horizontal u-line-3"></div>
                   <h5 class="u-text u-text-grey-70 u-text-15">Certificado de qualificação profissional válido em todo o território Nacional</h5><span class="u-file-icon u-icon u-text-custom-color-2 u-icon-6"><img src="images/1916131-bb7a46a9.png" alt=""></span>
                 </div>
               </div>
