--- a/Informática-Expres.html
+++ b/Informática-Expres.html
@@ -118,7 +118,7 @@
               <input type="email" placeholder="EMAIL PRINCIPAL" id="email-3b9a" name="email" class="u-border-grey-15 u-input u-input-rectangle u-input-3" required="">
             </div>
             <div class="u-form-group u-label-top u-form-group-4">
-              <label for="text-3842" class="u-label">Cupom</label>
+              <label for="text-3842" class="u-label">Insira um cupom</label>
               <input type="text" placeholder="" id="text-3842" name="text" class="u-border-grey-15 u-input u-input-rectangle u-input-4">
             </div>
             <div class="u-form-checkbox u-form-group u-label-top u-form-group-5">
