--- a/Annetec.html
+++ b/Annetec.html
@@ -162,7 +162,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
         <li data-u-target="#carousel_e3fa" class="u-active u-grey-30" data-u-slide-to="0"></li>
       </ol>
       <div class="u-carousel-inner" role="listbox">
-        <div class="u-active u-align-center u-carousel-item u-clearfix u-image u-section-1-1" src="" data-image-width="1280" data-image-height="800">
+        <div class="u-active u-align-center u-carousel-item u-clearfix u-image u-section-1-1" src="" data-image-width="1280" data-image-height="800" data-href="Annetec.html#sec-ac2b">
           <div class="u-clearfix u-sheet u-sheet-1"></div>
         </div>
       </div>
@@ -262,7 +262,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
                 <p class="u-text u-text-custom-color-6 u-text-21">9 x R$150,00</p>
                 <div class="u-border-1 u-border-grey-dark-1 u-line u-line-horizontal u-line-6"></div>
                 <h3 class="u-custom-font u-font-source-sans-pro u-text u-text-22">Informática Básica</h3>
-                <a href="Marketing-e-Vendas.html" class="u-border-none u-btn u-button-style u-custom-color-6 u-hover-palette-4-light-1 u-radius-6 u-btn-4"> Matricule-se</a>
+                <a href="#" class="u-border-none u-btn u-button-style u-custom-color-6 u-hover-palette-4-light-1 u-radius-6 u-btn-4"> Matricule-se</a>
               </div>
             </div>
             <div class="u-align-center u-container-style u-list-item u-repeater-item u-shape-rectangle">
@@ -296,7 +296,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
                 <p class="u-text u-text-custom-color-6 u-text-31">3 x R$ 150,00</p>
                 <div class="u-border-1 u-border-grey-dark-1 u-line u-line-horizontal u-line-8"></div>
                 <h3 class="u-custom-font u-font-source-sans-pro u-text u-text-32">Informática Express</h3>
-                <a href="Programação-Web.html" class="u-border-none u-btn u-button-style u-custom-color-6 u-hover-palette-4-light-1 u-radius-6 u-btn-6"> Matricule-se</a>
+                <a href="Auxiliar-Administrativo.html" class="u-border-none u-btn u-button-style u-custom-color-6 u-hover-palette-4-light-1 u-radius-6 u-btn-6"> Matricule-se</a>
               </div>
             </div>
             <div class="u-align-center u-container-style u-list-item u-repeater-item u-shape-rectangle">
