--- a/Annetec.html
+++ b/Annetec.html
@@ -156,7 +156,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
     <meta property="og:title" content="Annetec">
     <meta property="og:type" content="website">
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
-  <body data-home-page="Annetec.html" data-home-page-title="Annetec" class="u-body u-xl-mode" data-lang="pt"> 
+  <body class="u-body u-xl-mode" data-lang="pt"> 
     <section class="u-carousel u-slide u-block-1681-1" id="carousel_e3fa" data-interval="5000" data-u-ride="carousel">
       <ol class="u-absolute-hcenter u-carousel-indicators u-block-1681-2">
         <li data-u-target="#carousel_e3fa" class="u-active u-grey-30" data-u-slide-to="0"></li>
