--- a/Eletricista-Instalador.html
+++ b/Eletricista-Instalador.html
@@ -116,7 +116,7 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
                   </p>
                   <div class="u-border-1 u-border-grey-dark-1 u-line u-line-horizontal u-line-1"></div>
                   <p class="u-text u-text-custom-color-6 u-text-4">6 X R$250,00</p>
-                  <a href="Eletricista-Instalador.html#sec-75e6"" class="u-active-none u-border-2 u-border-hover-custom-color-5 u-border-no-left u-border-no-right u-border-no-top u-btn u-button-style u-custom-color-6 u-hover-none u-text-white u-btn-1">MATRICULE-SE</a>
+                  <a href="Eletricista-Instalador.html#sec-75e6" class="u-active-none u-border-2 u-border-hover-custom-color-5 u-border-no-left u-border-no-right u-border-no-top u-btn u-button-style u-custom-color-6 u-hover-none u-text-white u-btn-1">MATRICULE-SE</a>
                   <div class="u-border-1 u-border-custom-color-4 u-expanded-width u-line u-line-horizontal u-line-2"></div>
                   <h5 class="u-text u-text-5">VISÃ​O GERAL</h5><span class="u-file-icon u-icon u-text-custom-color-2 u-icon-2"><img src="images/2370264-2e056890.png" alt=""></span>
                   <h5 class="u-custom-font u-text u-text-font u-text-6">6 meses&nbsp;</h5>
@@ -185,16 +185,12 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
               <label for="email-3b9a" class="u-label">Email</label>
               <input type="email" placeholder="EMAIL PRINCIPAL" id="email-3b9a" name="email" class="u-border-grey-15 u-input u-input-rectangle u-input-3" required="">
             </div>
-            <div class="u-form-group u-label-top u-form-group-4">
-              <label for="text-b0c4" class="u-label u-label-4">Insira um cupom</label>
-              <input type="text" placeholder="" id="text-b0c4" name="text" class="u-border-grey-15 u-input u-input-rectangle u-input-4">
-            </div>
-            <div class="u-form-checkbox u-form-group u-label-top u-form-group-5">
+            <div class="u-form-checkbox u-form-group u-label-top u-form-group-4">
               <input type="checkbox" id="checkbox-3ed3" name="checkbox" value="On" class="u-field-input">
-              <label for="checkbox-3ed3" class="u-field-label">Estou ciente que a taxa de matrícula de R$50,00 será paga após a confirmação dos dados cadastrais na escola.</label>
+              <label for="checkbox-3ed3" class="u-field-label">A matrícula de R$50,00 será paga após a confirmação dos dados cadastrais na escola.</label>
             </div>
             <div class="u-align-center u-form-group u-form-submit u-label-top">
-              <a href="#" class="u-border-none u-btn u-btn-submit u-button-style u-custom-color-2 u-hover-custom-color-9 u-btn-1">enviar</a>
+              <a href="#" class="u-border-none u-btn u-btn-submit u-button-style u-custom-color-2 u-hover-custom-color-3 u-btn-1">enviar</a>
               <input type="submit" value="submit" class="u-form-control-hidden">
             </div>
             <div class="u-form-send-message u-form-send-success">Formulário Enviado, um de nosso consultores entrarão em contato!</div>
@@ -205,5 +201,22 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
         </div>
       </div>
     </section>
+    
+    
+    <footer class="u-align-center u-clearfix u-footer u-white u-footer" id="sec-0527"><div class="u-clearfix u-sheet u-sheet-1"></div></footer>
+    <section class="u-backlink u-clearfix u-grey-80">
+      <a class="u-link" href="https://nicepage.com/html-templates" target="_blank">
+        <span>HTML Template</span>
+      </a>
+      <p class="u-text">
+        <span>created with</span>
+      </p>
+      <a class="u-link" href="https://nicepage.app" target="_blank">
+        <span>Website Builder</span>
+      </a>. 
+    </section><span style="height: 64px; width: 64px; margin-left: 0px; margin-right: auto; margin-top: 0px; right: 45px; bottom: 20px; padding: 27px; background-image: none;" class="u-back-to-top u-custom-color-2 u-icon u-icon-circle u-opacity u-opacity-85" data-href="#">
+        <svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 551.13 551.13"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-1d98"></use></svg>
+        <svg class="u-svg-content" enable-background="new 0 0 551.13 551.13" viewBox="0 0 551.13 551.13" xmlns="http://www.w3.org/2000/svg" id="svg-1d98"><path d="m275.565 189.451 223.897 223.897h51.668l-275.565-275.565-275.565 275.565h51.668z"></path></svg>
+    </span>
   
 </body></html>
