--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
                 <h3 class="u-align-center u-custom-font u-font-source-sans-pro u-text u-text-16">Aguarde<br>
                   <br>
                 </h3>
-                <a href="https://nicepage.com/landing-page" class="u-border-none u-btn u-button-style u-custom-color-6 u-hover-palette-4-light-1 u-radius-6 u-btn-3"> Matricule-se</a>
+                <a href="#" class="u-border-none u-btn u-button-style u-custom-color-6 u-hover-palette-4-light-1 u-radius-6 u-btn-3"> Matricule-se</a>
               </div>
             </div>
           </div>
@@ -262,7 +262,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
                 <p class="u-text u-text-custom-color-6 u-text-21">9 x R$150,00</p>
                 <div class="u-border-1 u-border-grey-dark-1 u-line u-line-horizontal u-line-6"></div>
                 <h3 class="u-custom-font u-font-source-sans-pro u-text u-text-22">Informática Básica</h3>
-                <a href="https://nicepage.com/landing-page" class="u-border-none u-btn u-button-style u-custom-color-6 u-hover-palette-4-light-1 u-radius-6 u-btn-4"> Matricule-se</a>
+                <a href="Informática.html" class="u-border-none u-btn u-button-style u-custom-color-6 u-hover-palette-4-light-1 u-radius-6 u-btn-4"> Matricule-se</a>
               </div>
             </div>
             <div class="u-align-center u-container-style u-list-item u-repeater-item u-shape-rectangle">
@@ -279,7 +279,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
                 <p class="u-text u-text-custom-color-6 u-text-26">13 x R$150,00</p>
                 <div class="u-border-1 u-border-grey-dark-1 u-line u-line-horizontal u-line-7"></div>
                 <h3 class="u-custom-font u-font-source-sans-pro u-text u-text-27">Informática Avançada</h3>
-                <a href="https://nicepage.com/landing-page" class="u-border-none u-btn u-button-style u-custom-color-6 u-hover-palette-4-light-1 u-radius-6 u-btn-5"> Matricule-se</a>
+                <a href="Informática-Avançada.html" class="u-border-none u-btn u-button-style u-custom-color-6 u-hover-palette-4-light-1 u-radius-6 u-btn-5"> Matricule-se</a>
               </div>
             </div>
             <div class="u-align-center u-container-style u-list-item u-repeater-item u-shape-rectangle">
@@ -296,7 +296,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
                 <p class="u-text u-text-custom-color-6 u-text-31">3 x R$ 150,00</p>
                 <div class="u-border-1 u-border-grey-dark-1 u-line u-line-horizontal u-line-8"></div>
                 <h3 class="u-custom-font u-font-source-sans-pro u-text u-text-32">Informática Express</h3>
-                <a href="https://nicepage.com/landing-page" class="u-border-none u-btn u-button-style u-custom-color-6 u-hover-palette-4-light-1 u-radius-6 u-btn-6"> Matricule-se</a>
+                <a href="Informática-Expres.html" class="u-border-none u-btn u-button-style u-custom-color-6 u-hover-palette-4-light-1 u-radius-6 u-btn-6"> Matricule-se</a>
               </div>
             </div>
             <div class="u-align-center u-container-style u-list-item u-repeater-item u-shape-rectangle">
@@ -313,7 +313,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
                 <p class="u-text u-text-custom-color-6 u-text-36">4 x R$150,00</p>
                 <div class="u-border-1 u-border-grey-dark-1 u-line u-line-horizontal u-line-9"></div>
                 <h3 class="u-custom-font u-font-source-sans-pro u-text u-text-37">Informática Sênior</h3>
-                <a href="https://nicepage.com/landing-page" class="u-border-none u-btn u-button-style u-custom-color-6 u-hover-palette-4-light-1 u-radius-6 u-btn-7"> Matricule-se</a>
+                <a href="Informática-Sênior.html" class="u-border-none u-btn u-button-style u-custom-color-6 u-hover-palette-4-light-1 u-radius-6 u-btn-7"> Matricule-se</a>
               </div>
             </div>
             <div class="u-align-center u-container-style u-list-item u-repeater-item u-shape-rectangle">
@@ -330,7 +330,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
                 <p class="u-text u-text-custom-color-6 u-text-41">5 x R$150,00</p>
                 <div class="u-border-1 u-border-grey-dark-1 u-line u-line-horizontal u-line-10"></div>
                 <h3 class="u-custom-font u-font-source-sans-pro u-text u-text-42">Programação Web</h3>
-                <a href="https://nicepage.com/landing-page" class="u-border-none u-btn u-button-style u-custom-color-6 u-hover-palette-4-light-1 u-radius-6 u-btn-8"> Matricule-se</a>
+                <a href="Programação-Web.html" class="u-border-none u-btn u-button-style u-custom-color-6 u-hover-palette-4-light-1 u-radius-6 u-btn-8"> Matricule-se</a>
               </div>
             </div>
             <div class="u-align-center u-container-style u-list-item u-repeater-item u-shape-rectangle">
@@ -348,7 +348,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
                 <div class="u-border-1 u-border-grey-dark-1 u-line u-line-horizontal u-line-11"></div>
                 <h3 class="u-custom-font u-font-source-sans-pro u-text u-text-47">aguarde<br>
                 </h3>
-                <a href="https://nicepage.com/landing-page" class="u-border-none u-btn u-button-style u-custom-color-6 u-hover-palette-4-light-1 u-radius-6 u-btn-9"> Matricule-se</a>
+                <a href="#" class="u-border-none u-btn u-button-style u-custom-color-6 u-hover-palette-4-light-1 u-radius-6 u-btn-9"> Matricule-se</a>
               </div>
             </div>
           </div>
@@ -375,7 +375,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
                 <p class="u-text u-text-custom-color-6 u-text-5">6 X R$150,00</p>
                 <div class="u-border-1 u-border-grey-dark-1 u-line u-line-horizontal u-line-2"></div>
                 <h3 class="u-custom-font u-font-source-sans-pro u-text u-text-6">Marketing &amp; Vendas</h3>
-                <a href="https://nicepage.com/landing-page" class="u-border-none u-btn u-button-style u-custom-color-6 u-hover-palette-4-light-1 u-radius-6 u-btn-1"> Matricule-se</a>
+                <a href="Marketing-e-Vendas.html" class="u-border-none u-btn u-button-style u-custom-color-6 u-hover-palette-4-light-1 u-radius-6 u-btn-1"> Matricule-se</a>
               </div>
             </div>
             <div class="u-align-center u-container-style u-list-item u-repeater-item u-shape-rectangle">
@@ -392,7 +392,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
                 <p class="u-text u-text-custom-color-6 u-text-10">6 x R$200,00</p>
                 <div class="u-border-1 u-border-grey-dark-1 u-line u-line-horizontal u-line-3"></div>
                 <h3 class="u-custom-font u-font-source-sans-pro u-text u-text-11">Auxiliar Administrativo</h3>
-                <a href="https://nicepage.com/landing-page" class="u-border-none u-btn u-button-style u-custom-color-6 u-hover-palette-4-light-1 u-radius-6 u-btn-2"> Matricule-se</a>
+                <a href="Auxiliar-Administrativo.html" class="u-border-none u-btn u-button-style u-custom-color-6 u-hover-palette-4-light-1 u-radius-6 u-btn-2"> Matricule-se</a>
               </div>
             </div>
             <div class="u-align-center u-container-style u-list-item u-repeater-item u-shape-rectangle">
@@ -409,7 +409,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
                 <p class="u-text u-text-custom-color-6 u-text-15">6 x R$150,00</p>
                 <div class="u-border-1 u-border-grey-dark-1 u-line u-line-horizontal u-line-4"></div>
                 <h3 class="u-custom-font u-font-source-sans-pro u-text u-text-16">Auxiliar Jurídico</h3>
-                <a href="https://nicepage.com/landing-page" class="u-border-none u-btn u-button-style u-custom-color-6 u-hover-palette-4-light-1 u-radius-6 u-btn-3"> Matricule-se</a>
+                <a href="Auxiliar-Jurídico.html" class="u-border-none u-btn u-button-style u-custom-color-6 u-hover-palette-4-light-1 u-radius-6 u-btn-3"> Matricule-se</a>
               </div>
             </div>
           </div>
@@ -438,7 +438,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
                 <div class="u-border-1 u-border-grey-dark-1 u-line u-line-horizontal u-line-2"></div>
                 <h3 class="u-custom-font u-font-source-sans-pro u-text u-text-6">Empreendedorismo na saúde</h3>
                 <h3 class="u-custom-font u-font-source-sans-pro u-text u-text-7">[Formação de corretores de planos de saúde]</h3>
-                <a href="https://nicepage.com/landing-page" class="u-border-none u-btn u-button-style u-custom-color-6 u-hover-palette-4-light-1 u-radius-6 u-btn-1"> Matricule-se</a>
+                <a href="Empreendedorismo-na-saude.html" class="u-border-none u-btn u-button-style u-custom-color-6 u-hover-palette-4-light-1 u-radius-6 u-btn-1"> Matricule-se</a>
               </div>
             </div>
             <div class="u-align-center u-container-style u-list-item u-repeater-item u-shape-rectangle">
@@ -456,7 +456,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
                 <div class="u-border-1 u-border-grey-dark-1 u-line u-line-horizontal u-line-3"></div>
                 <h3 class="u-custom-font u-font-source-sans-pro u-text u-text-12">Balconista de farmácia</h3>
                 <h3 class="u-custom-font u-font-source-sans-pro u-text u-text-13">&nbsp;</h3>
-                <a href="https://nicepage.com/landing-page" class="u-border-none u-btn u-button-style u-custom-color-6 u-hover-palette-4-light-1 u-radius-6 u-btn-2"> Matricule-se</a>
+                <a href="Balconista-de-Farmácia.html" class="u-border-none u-btn u-button-style u-custom-color-6 u-hover-palette-4-light-1 u-radius-6 u-btn-2"> Matricule-se</a>
               </div>
             </div>
             <div class="u-align-center u-container-style u-list-item u-repeater-item u-shape-rectangle">
@@ -468,13 +468,13 @@ document.addEventListener("DOMContentLoaded", function(event) {
                 <p class="u-text u-text-white u-text-15">| Presencial&nbsp;&nbsp;<span class="u-file-icon u-icon u-text-white"><img src="images/1077114-41ae8903.png" alt=""></span>
                 </p>
                 <div class="u-expanded-width-sm u-expanded-width-xl u-expanded-width-xs u-grey-5 u-shape u-shape-rectangle u-shape-6"></div>
-                <p class="u-text u-text-16">EM BREVE<br>&nbsp;NOVIDADES
+                <p class="u-text u-text-16">R$<br>&nbsp;R$
                 </p>
-                <p class="u-text u-text-custom-color-6 u-text-17">EM BREVE</p>
+                <p class="u-text u-text-custom-color-6 u-text-17">6 X 250,00</p>
                 <div class="u-border-1 u-border-grey-dark-1 u-line u-line-horizontal u-line-4"></div>
                 <h3 class="u-custom-font u-font-source-sans-pro u-text u-text-18">Cuidado de Idosos</h3>
                 <h3 class="u-custom-font u-font-source-sans-pro u-text u-text-19">&nbsp;</h3>
-                <a href="https://nicepage.com/landing-page" class="u-border-none u-btn u-button-style u-custom-color-6 u-hover-palette-4-light-1 u-radius-6 u-btn-3"> Matricule-se</a>
+                <a href="Cuidador-de-Idosos.html" class="u-border-none u-btn u-button-style u-custom-color-6 u-hover-palette-4-light-1 u-radius-6 u-btn-3"> Matricule-se</a>
               </div>
             </div>
           </div>
