--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
                 <p class="u-text u-text-white u-text-15">| Presencial&nbsp;&nbsp;<span class="u-file-icon u-icon u-text-white"><img src="images/1077114-41ae8903.png" alt=""></span>
                 </p>
                 <div class="u-expanded-width-sm u-expanded-width-xl u-expanded-width-xs u-grey-5 u-shape u-shape-rectangle u-shape-6"></div>
-                <p class="u-text u-text-16">R$<br>&nbsp;R$
+                <p class="u-text u-text-16">R$ 1.250,00<br>&nbsp;R$ 750,00
                 </p>
                 <p class="u-text u-text-custom-color-6 u-text-17">6 X 250,00</p>
                 <div class="u-border-1 u-border-grey-dark-1 u-line u-line-horizontal u-line-4"></div>
