--- a/Eletricista-Instalador.html
+++ b/Eletricista-Instalador.html
@@ -185,9 +185,13 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
               <label for="email-3b9a" class="u-label">Email</label>
               <input type="email" placeholder="EMAIL PRINCIPAL" id="email-3b9a" name="email" class="u-border-grey-15 u-input u-input-rectangle u-input-3" required="">
             </div>
-            <div class="u-form-checkbox u-form-group u-label-top u-form-group-4">
+             <div class="u-form-group u-label-top u-form-group-4">
+              <label for="text-0b5e" class="u-label">Cupom</label>
+              <input type="text" placeholder="" id="text-0b5e" name="text" class="u-border-grey-15 u-input u-input-rectangle u-input-4">
+            </div>
+            <div class="u-form-checkbox u-form-group u-label-top u-form-group-5">
               <input type="checkbox" id="checkbox-3ed3" name="checkbox" value="On" class="u-field-input">
-              <label for="checkbox-3ed3" class="u-field-label">A matrícula de R$50,00 será paga após a confirmação dos dados cadastrais na escola.</label>
+              <label for="checkbox-3ed3" class="u-field-label">Tenho ciência que a matrícula de R$50,00 será paga após a confirmação dos dados cadastrais na escola.</label>
             </div>
             <div class="u-align-center u-form-group u-form-submit u-label-top">
               <a href="#" class="u-border-none u-btn u-btn-submit u-button-style u-custom-color-2 u-hover-custom-color-3 u-btn-1">enviar</a>
