--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
                 <h3 class="u-custom-font u-font-source-sans-pro u-text u-text-white u-text-14">40%<br>OFF
                 </h3>
                 <div class="u-custom-color-2 u-radius-10 u-shape u-shape-round u-shape-5"></div>
-                <p class="u-text u-text-white u-text-15">| Presencial&nbsp;&nbsp;<span class="u-file-icon u-icon u-text-white"><img src="images/1077114-41ae8903.png" alt=""></span>
+                <p class="u-text u-text-white u-text-15">| Presencial&nbsp;&nbsp;<span class="u-file-icon u-icon u-text-white"><img src="images/medica-conversando-com-seu-paciente-mais-velho.jpg" alt=""></span>
                 </p>
                 <div class="u-expanded-width-sm u-expanded-width-xl u-expanded-width-xs u-grey-5 u-shape u-shape-rectangle u-shape-6"></div>
                 <p class="u-text u-text-16">R$ 1.250,00<br>&nbsp;R$ 750,00
