--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
         <li data-u-target="#carousel_e3fa" class="u-active u-grey-30" data-u-slide-to="0"></li>
       </ol>
       <div class="u-carousel-inner" role="listbox">
-        <div class="u-active u-align-center u-carousel-item u-clearfix u-image u-section-1-1" src="" data-image-width="1280" data-image-height="800">
+        <div class="u-active u-align-center u-carousel-item u-clearfix u-image u-section-1-1" src="" data-image-width="1280" data-image-height="800" data-href="Indexx.html#sec-ac2b">
           <div class="u-clearfix u-sheet u-sheet-1"></div>
         </div>
       </div>
