--- a/index.html
+++ b/index.html
@@ -335,18 +335,18 @@ document.addEventListener("DOMContentLoaded", function(event) {
             </div>
             <div class="u-align-center u-container-style u-list-item u-repeater-item u-shape-rectangle">
               <div class="u-container-layout u-similar-container u-container-layout-9">
-                <img alt="" class="u-expanded-width u-image u-image-default u-image-9" data-image-width="826" data-image-height="561" src="images/embreve1.png"><span class="u-custom-item u-file-icon u-icon u-text-custom-color-2 u-icon-19"><img src="images/102279-adccc655.png" alt=""></span>
+                <img alt="" class="u-expanded-width u-image u-image-default u-image-9" data-image-width="826" data-image-height="561" src="images/canva5.png"><span class="u-custom-item u-file-icon u-icon u-text-custom-color-2 u-icon-19"><img src="images/102279-adccc655.png" alt=""></span>
                 <div class="u-custom-color-2 u-radius-10 u-shape u-shape-round u-shape-17"></div>
                 <p class="u-text u-text-white u-text-43">| Presencial&nbsp;&nbsp;<span class="u-file-icon u-icon u-text-white"><img src="images/1077114-41ae8903.png" alt=""></span>
                 </p>
                 <h3 class="u-custom-font u-font-source-sans-pro u-text u-text-white u-text-44">40 %<br>OFF
                 </h3>
                 <div class="u-expanded-width u-grey-5 u-shape u-shape-rectangle u-shape-18"></div>
-                <p class="u-text u-text-45">EM BREVE&nbsp;<br>NOVIDADES
+                <p class="u-text u-text-45">de R$750,00&nbsp;<br>por R$450,00
                 </p>
-                <p class="u-text u-text-custom-color-6 u-text-46">EM BREVE</p>
+                <p class="u-text u-text-custom-color-6 u-text-46">3 x R$150,00</p>
                 <div class="u-border-1 u-border-grey-dark-1 u-line u-line-horizontal u-line-11"></div>
-                <h3 class="u-custom-font u-font-source-sans-pro u-text u-text-47">aguarde<br>
+                <h3 class="u-custom-font u-font-source-sans-pro u-text u-text-47">Designer Canva<br>
                 </h3>
                 <a href="#" class="u-border-none u-btn u-button-style u-custom-color-6 u-hover-palette-4-light-1 u-radius-6 u-btn-9"> Matricule-se</a>
               </div>
