--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
                 <div class="u-border-1 u-border-grey-dark-1 u-line u-line-horizontal u-line-11"></div>
                 <h3 class="u-custom-font u-font-source-sans-pro u-text u-text-47">Designer Canva<br>
                 </h3>
-                <a href="#" class="u-border-none u-btn u-button-style u-custom-color-6 u-hover-palette-4-light-1 u-radius-6 u-btn-9"> Matricule-se</a>
+                <a href="Canva.html" class="u-border-none u-btn u-button-style u-custom-color-6 u-hover-palette-4-light-1 u-radius-6 u-btn-9"> Matricule-se</a>
               </div>
             </div>
           </div>
